Changed JDK version from 21 to 17